# winter-service-docker

./: .gitignore  CONTRIBUTING.md  README.md  index.md  mise.toml  pyproject.toml  winter-ext.toml
ai/: dev-loop.md  per-env-isolation.md  provider-contract.md  workspace-singletons.md
context/: dev-loop.md  per-env-isolation.md  provider-contract.md  workflow-setup.md  workspace-singletons.md
hooks/: destroy-worktree.sh  init-worktree.sh
src/docker_orchestrator/: __init__.py  cli.py  compose_client.py  compose_ps.py  env_context.py  lifecycle.py  logs.py  manifest.py  patterns.py  restart.py  scaffold.py  status.py
tests/: conftest.py  fakes.py  test_catalog.py  test_compose_ps.py  test_lifecycle.py  test_logs.py  test_phase1.py  test_restart.py  test_scaffold.py  test_scope.py  test_sourcing.py  test_status.py  test_two_file_scope.py  test_workspace.py
workflow/: config.toml.example  doctor.sh  service
